# NeuroBoost

./: Module_3.cpp
.cache/clangd/index/: Timer.cpp.1E03B4BC0E35ABC0.idx  Timer.h.6E7E31DB7FBC41B8.idx  databaseqt.h.E9256C8F097B9D6C.idx  main.cpp.EAA8B29A41BC2597.idx  maingames.cpp.6775C8E7D826762B.idx  maingames.h.1918A2DC340C23B6.idx  mainwindow.cpp.733CF376BDAC35A6.idx  mainwindow.h.80AEEECB0AB928EC.idx
MainWin/: CMakeLists.txt  form.ui  gamespage.cpp  gamespage.h  gamespage.ui  homepage.cpp  homepage.h  homepage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  shoppage.cpp  shoppage.h  shoppage.ui
Module_1/: Module_1  Module_1.cpp
Module_1/Qt/: CMakeLists.txt  main.cpp  mainModule_1.cpp  mainModule_1.h  mainModule_1.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Module_2/game_memory/: CMakeLists.txt  colormemory.cpp  colormemory.h  databaseqt.cpp  databaseqt.h  gamewidget.cpp  gamewidget.h  gamewidget.ui  main.cpp
Module_2/test_memory_gui/: CMakeLists.txt  colormemory.cpp  colormemory.cpp.autosave  colormemory.h  colormemory.h.autosave  colormemory.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
Module_3/: compare.cpp  compare.h  core.cpp  core.h  main.cpp  memory.h  statements.cpp  test.cpp
Module_3/Qt/: .gitignore  CMakeLists.txt  Timer.h  databaseqt.cpp  main.cpp  maingames.cpp  maingames.h  maingames.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Module_3/Qt/cpp/: excess.cpp  excess.h  memory.cpp  sequence.cpp  sequence.h  statements.h
Module_3/output/: main
Module_3/output/main.dSYM/Contents/Resources/DWARF/: main
Module_4/: Module_4.cpp  Module_4.sln  Module_4.vcxproj  Module_4.vcxproj.filters  Points_system.cpp  Points_system.h  includes.h
Module_4/Module_4/x64/Debug/: Module_4.exe.recipe  Module_4.ilk  vc143.idb
Module_4/Module_4/x64/Debug/Module_4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Module_4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Module_4/databaseQT/: CMakeLists.txt  databaseqt.cpp  databaseqt.h  main.cpp  mainbd.cpp  mainbd.h  mainbd.ui  mainbd.ui.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui
Player_database/: Player_database.sln
Player_database/Player_database/: Data_Player.cpp  Data_Player.h  Player_database.cpp  Player_database.vcxproj  Player_database.vcxproj.filters  include.h
Player_database/Player_database/Player_database/x64/Debug/: Player_database.exe.recipe  Player_database.ilk  vc143.idb
Player_database/Player_database/Player_database/x64/Debug/Player_database.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Player_database.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Timer/: Timer.cpp  Timer.h
